force-app/main/default/objects/Case/fields/ForwardingDateTime__c.field-meta.xml
<CustomField>
    <fullName>ForwardingDateTime__c</fullName>
    <description>Data/Hora de Encaminhamento para a Fila de Casos.</description>
    <formula>TEXT(DAY(DATEVALUE(CreatedDate))) + &quot;/&quot; +
TEXT(MONTH(DATEVALUE(CreatedDate))) +  &quot;/&quot; +
TEXT(YEAR(DATEVALUE(CreatedDate))) + &quot;      &quot; +
TEXT(HOUR(TIMEVALUE(CreatedDate )) -3)+ &quot;:&quot; +
TEXT(MINUTE(TIMEVALUE(CreatedDate )))</formula>
    <label>Data/Hora de Encaminhamento</label>
    <type>Text</type>
</CustomField>