force-app/main/default/objects/Case/fields/FraudSuspicion__c.field-meta.xml
<CustomField>
    <fullName>FraudSuspicion__c</fullName>
    <label>Suspeita de Fraude</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Nao</fullName>
                <label>Não</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>