force-app/main/default/objects/Case/fields/GenericDocument__c.field-meta.xml
<CustomField>
    <fullName>GenericDocument__c</fullName>
    <formula>(Account.DocumentNumber__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doc. Genérico</label>
    <type>Text</type>
</CustomField>