force-app/main/default/objects/Case/fields/HasStatusChange__c.field-meta.xml
<CustomField>
    <fullName>HasStatusChange__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[Bloco 9] Jornada 9 - Abertura e Tratativa de Casos | Campo de apoio, possibilitando em que ao ser criado um caso para a Jornada 9, o campo será alterado para True, e então será executado um Flow que impossibilitará alteração manual de Status via Layout, somente será possível realizar alterações automatizadas (via botões).</description>
    <label>Alteração Status</label>
    <type>Checkbox</type>
</CustomField>