force-app/main/default/objects/Case/fields/HDECustomerProfile__c.field-meta.xml
<CustomField>
    <fullName>HDECustomerProfile__c</fullName>
    <description>Para uso do HDE, reflete o campo CustomerProfileDetails__c do objeto Account, informa se o cliente tem indicador Negativo ou Neutro/Positivo</description>
    <formula>Account.CustomerProfileDetails__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Perfil do Cliente</label>
    <type>Text</type>
</CustomField>