force-app/main/default/objects/Case/fields/HDEOtherProducts__c.field-meta.xml
<CustomField>
    <fullName>HDEOtherProducts__c</fullName>
    <label>Outros Produtos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>