force-app/main/default/objects/Case/fields/HDERootCause__c.field-meta.xml
<CustomField>
    <fullName>HDERootCause__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo destinado para descriminar a solução da causa raiz do Caso da frente de HDE</description>
    <inlineHelpText>Causa raiz solucionada no atendimento? 
Se &quot;SIM&quot; informe o que foi solucionado neste caso no campo texto logo a baixo:</inlineHelpText>
    <label>Causa raiz solucionada? SIM</label>
    <type>Checkbox</type>
</CustomField>