force-app/main/default/objects/Case/fields/HDERootCauseDescription__c.field-meta.xml
<CustomField>
    <fullName>HDERootCauseDescription__c</fullName>
    <description>Campo para descrever a solução da causa raiz do caso</description>
    <label>Descreva a causa raiz solucionada:</label>
    <type>TextArea</type>
</CustomField>