force-app/main/default/objects/Case/fields/InitialBalance__c.field-meta.xml
<CustomField>
    <fullName>InitialBalance__c</fullName>
    <description>Saldo inicial no momento da efetivação do ajuste de saldo</description>
    <label>Saldo Inicial</label>
    <length>20</length>
    <type>Text</type>
</CustomField>