force-app/main/default/objects/Case/fields/InteractionProtocolLegacySystem__c.field-meta.xml
<CustomField>
    <fullName>InteractionProtocolLegacySystem__c</fullName>
    <label>Número do Protocolo/Interação</label>
    <type>TextArea</type>
</CustomField>