force-app/main/default/objects/Case/fields/IsHDE__c.field-meta.xml
<CustomField>
    <fullName>IsHDE__c</fullName>
    <formula>CONTAINS(RecordType.Name, &quot;HDE&quot;)</formula>
    <label>É do HDE</label>
    <type>Checkbox</type>
</CustomField>