force-app/main/default/objects/Case/fields/IsVisibleInListViewToCurrentUser__c.field-meta.xml
<CustomField>
    <fullName>IsVisibleInListViewToCurrentUser__c</fullName>
    <formula>OR(
				AND(
								RecordType.DeveloperName = &apos;EmailTrigger&apos;,
								$Permission.CaseEmailTrigger 
				),
				AND(
								RecordType.DeveloperName = &apos;CallSupervisor&apos;,
								$Permission.CaseCallSupervisor 
				),
				AND(
								RecordType.DeveloperName = &apos;TechnicalMonitoring&apos;,
								$Permission.CaseTechnicalMonitoring
				),
				AND(
								RecordType.DeveloperName = &apos;GoldProcessesEscalation&apos;,
								$Permission.CaseGoldProcessesEscalation
				),
				AND(
								RecordType.DeveloperName = &apos;StoreProcessesEscalation&apos;,
								$Permission.CaseStoreProcessesEscalation
				),				
				AND(
								RecordType.DeveloperName = &apos;CommunityOuvidoriaProcessesEscalation&apos;,
								$Permission.CaseCommunityOuvidoriaProcessesEscalation
				),				
				AND(
								RecordType.DeveloperName = &apos;OuvidoriaProcessesEscalation&apos;,
								$Permission.CaseOuvidoriaProcessesEscalation
				),				
				AND(
								RecordType.DeveloperName = &apos;PlatinumProcessesEscalation&apos;,
								$Permission.CasePlatinumProcessesEscalation
				),				
				AND(
								RecordType.DeveloperName = &apos;PrimeProcessesEscalation&apos;,
								$Permission.CasePrimeProcessesEscalation
				),				
				AND(
								RecordType.DeveloperName = &apos;EscalationAndLawSuits&apos;,
								$Permission.CaseEscalationAndLawSuits
				),				
				AND(
								RecordType.DeveloperName = &apos;PurpuraProcessesEscalation&apos;,
								$Permission.CasePurpuraProcessesEscalation
				),				
				AND(
								RecordType.DeveloperName = &apos;ResellerStoreProcessesEscalation&apos;,
								$Permission.CaseResellerStoreProcessesEscalation
				),				
				AND(
								RecordType.DeveloperName = &apos;SilverProcessesEscalation&apos;,
								$Permission.CaseSilverProcessesEscalation
				),				
				AND(
								RecordType.DeveloperName = &apos;VivoVProcessesEscalation&apos;,
								$Permission.CaseVivoVProcessesEscalation
				),
				AND(
								RecordType.DeveloperName = &apos;VPRStoreProcessesEscalation&apos;,
								$Permission.CaseHDEVPRStoreOUT
				),
				AND(
								RecordType.DeveloperName = &apos;WalletProcessesEscalation&apos;,
								$Permission.CaseWalletProcessesEscalation
				)	
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is visible in list view to current user</label>
    <type>Checkbox</type>
</CustomField>