force-app/main/default/objects/Case/fields/LastActivityDate__c.field-meta.xml
<CustomField>
    <fullName>LastActivityDate__c</fullName>
    <description>Para uso do HDE, quando uma tarefa é criada, atualiza o campo para a data de vencimento da tarefa</description>
    <label>Data da Última Tarefa</label>
    <type>DateTime</type>
</CustomField>