force-app/main/default/objects/Case/fields/LastActivityName__c.field-meta.xml
<CustomField>
    <fullName>LastActivityName__c</fullName>
    <label>Nome da Última Atividade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>