force-app/main/default/objects/Case/fields/LastDateUpdate__c.field-meta.xml
<CustomField>
    <fullName>LastDateUpdate__c</fullName>
    <label>Data Última atualização</label>
    <type>Date</type>
</CustomField>