force-app/main/default/objects/Case/fields/LastRequestStatus__c.field-meta.xml
<CustomField>
    <fullName>LastRequestStatus__c</fullName>
    <label>Estado última solicitação enviada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SemSolicitacao</fullName>
                <label>Sem Solicitação</label>
            </value>
            <value>
                <fullName>Cancelando</fullName>
            </value>
            <value>
                <fullName>Reagendando</fullName>
            </value>
            <value>
                <fullName>Suspendendo</fullName>
            </value>
            <value>
                <fullName>AutorizandoDoacao</fullName>
                <label>Autorizando Doação</label>
            </value>
            <value>
                <fullName>RemovendoConflito</fullName>
                <label>Removendo Conflito</label>
            </value>
            <value>
                <fullName>ErroCancelamento</fullName>
                <label>Erro Cancelamento</label>
            </value>
            <value>
                <fullName>ErroReagemento</fullName>
                <label>Erro Reagendamento</label>
            </value>
            <value>
                <fullName>ErroSuspensao</fullName>
                <label>Erro Suspensão</label>
            </value>
            <value>
                <fullName>ErroAutorizacaoDeDoacao</fullName>
                <label>Erro Autorização de Doação</label>
            </value>
            <value>
                <fullName>ErroRemocaoDeConflito</fullName>
                <label>Erro Remoção de Conflito</label>
            </value>
            <value>
                <fullName>SucessoCancelamento</fullName>
                <label>Sucesso Cancelamento</label>
            </value>
            <value>
                <fullName>SucessoReagemento</fullName>
                <label>Sucesso Reagendamento</label>
            </value>
            <value>
                <fullName>SucessoSuspensao</fullName>
                <label>Sucesso Suspensão</label>
            </value>
            <value>
                <fullName>SucessoAutorizacaoDeDoacao</fullName>
                <label>Sucesso Autorização de Doação</label>
            </value>
            <value>
                <fullName>SucessoRemocaoDeConflito</fullName>
                <label>Sucesso Remoção de Conflito</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>