force-app/main/default/objects/Case/fields/LineNumber__c.field-meta.xml
<CustomField>
    <fullName>LineNumber__c</fullName>
    <inlineHelpText>Só será possível consultar detalhes deste número após conclusão da portabilidade, ou após abertura de um Caso referente à Caso/Processo ou Portabilidade.</inlineHelpText>
    <label>Número da linha</label>
    <length>12</length>
    <type>Text</type>
</CustomField>