force-app/main/default/objects/Case/fields/LineNumberVivo__c.field-meta.xml
<CustomField>
    <fullName>LineNumberVivo__c</fullName>
    <label>Num linha Vivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>