force-app/main/default/objects/Case/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <label>Gestor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>