force-app/main/default/objects/Case/fields/NumberLine__c.field-meta.xml
<CustomField>
    <fullName>NumberLine__c</fullName>
    <formula>IF
(
				NOT(ISBLANK(Asset.Id)), 
				    HYPERLINK(&apos;/&apos;+ Asset.Id, LineNumber__c ,&quot;_self&quot;),  
				    LineNumber__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Só será possível consultar detalhes deste número após conclusão da portabilidade, ou após abertura de um Caso referente à Caso/Processo ou Portabilidade.</inlineHelpText>
    <label>Número da linha</label>
    <type>Text</type>
</CustomField>