force-app/main/default/objects/Case/fields/OmniChannel__c.field-meta.xml
<CustomField>
    <fullName>OmniChannel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Omni Channel</label>
    <type>Checkbox</type>
</CustomField>