force-app/main/default/objects/Case/fields/OpeningGroup__c.field-meta.xml
<CustomField>
    <fullName>OpeningGroup__c</fullName>
    <label>Grupo Abertura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>