force-app/main/default/objects/Case/fields/OpenOrClosedCase__c.field-meta.xml
<CustomField>
    <fullName>OpenOrClosedCase__c</fullName>
    <description>Campo utilizado para filtrar os valores de Status para Aberto ou Fechado.</description>
    <formula>IF(ISPICKVAL(Status, &quot;Closed&quot;), &quot;Caso Fechado&quot;, &quot;Caso Aberto&quot;)</formula>
    <label>Caso Aberto ou Fechado</label>
    <type>Text</type>
</CustomField>