force-app/main/default/objects/Case/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abrir</fullName>
            </value>
            <value>
                <fullName>Encaminhar</fullName>
            </value>
            <value>
                <fullName>Encerrar Tratamento</fullName>
            </value>
            <value>
                <fullName>Encerrar Caso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>