force-app/main/default/objects/Case/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <description>Campo criado para inclusão no relatório de casos - Lookup em produto não é visível em relatórios no ambiente de comunidades</description>
    <formula>Product.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operadora</label>
    <type>Text</type>
</CustomField>