force-app/main/default/objects/Case/fields/OperatorRole__c.field-meta.xml
<CustomField>
    <fullName>OperatorRole__c</fullName>
    <description>Campo utilizado para informa papel do Operador.</description>
    <formula>Owner:User.UserRole.Name</formula>
    <label>Papel do Operador</label>
    <type>Text</type>
</CustomField>