force-app/main/default/objects/Case/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Número da Ordem</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Cases (Número da Ordem)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>