force-app/main/default/objects/Case/fields/OriginCell__c.field-meta.xml
<CustomField>
    <fullName>OriginCell__c</fullName>
    <label>Célula Origem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>