force-app/main/default/objects/Case/fields/OwnerIsUser__c.field-meta.xml
<CustomField>
    <fullName>OwnerIsUser__c</fullName>
    <formula>$User.Id  =  OwnerId</formula>
    <label>Usuário é o Proprietário?</label>
    <type>Checkbox</type>
</CustomField>