force-app/main/default/objects/Case/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>Campo Utilizado para Comunicação entre GPS e Salesforce, para o componente do GPSCanvas</description>
    <label>Payload</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>