force-app/main/default/objects/Case/fields/PersonType__c.field-meta.xml
<CustomField>
    <fullName>PersonType__c</fullName>
    <label>Tipo de Pessoa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PessoaFisica</fullName>
                <default>true</default>
                <label>Pessoa Física</label>
            </value>
            <value>
                <fullName>PessoaJuridica</fullName>
                <label>Pessoa Jurídica</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>