force-app/main/default/objects/Case/fields/PhoneFederativeUnit__c.field-meta.xml
<CustomField>
    <fullName>PhoneFederativeUnit__c</fullName>
    <label>UF Linha</label>
    <length>6</length>
    <type>Text</type>
</CustomField>