force-app/main/default/objects/Case/fields/PortabilityWindow__c.field-meta.xml
<CustomField>
    <fullName>PortabilityWindow__c</fullName>
    <description>Data da Janela de Portabilidade</description>
    <label>Data da Janela</label>
    <type>DateTime</type>
</CustomField>