force-app/main/default/objects/Case/fields/ProceedingValue__c.field-meta.xml
<CustomField>
    <fullName>ProceedingValue__c</fullName>
    <description>[Rivanilson Costa - 13/06/2024 - J62 - BL15] Valor Procedente dos Itens (Impugnado Total + Parcial)</description>
    <label>Valor Procedentes</label>
    <summarizedField>DisputedItem__c.ChallengeValue__c</summarizedField>
    <summaryFilterItems>
        <field>DisputedItem__c.Status__c</field>
        <operation>equals</operation>
        <value>Impugnado, Impugnado Parcial</value>
    </summaryFilterItems>
    <summaryForeignKey>DisputedItem__c.CaseId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>