force-app/main/default/objects/Case/fields/ProcessType__c.field-meta.xml
<CustomField>
    <fullName>ProcessType__c</fullName>
    <label>Tipo de Processo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>portin</fullName>
                <label>Port-In</label>
            </value>
            <value>
                <fullName>portout</fullName>
                <label>Port-Out</label>
            </value>
            <value>
                <fullName>estorno portin</fullName>
                <label>Estorno de Port-In</label>
            </value>
            <value>
                <fullName>estorno portout</fullName>
                <label>Estorno de Port-Out</label>
            </value>
            <value>
                <fullName>winback</fullName>
                <label>Winback</label>
            </value>
            <value>
                <fullName>desconexao</fullName>
                <label>Desconexão</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>