force-app/main/default/objects/Case/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Instância</label>
    <length>80</length>
    <type>Text</type>
</CustomField>