force-app/main/default/objects/Case/fields/Protocol__c.field-meta.xml
<CustomField>
    <fullName>Protocol__c</fullName>
    <description>Protocolo recebido da URA.</description>
    <label>Protocolo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>