force-app/main/default/objects/Case/fields/ProtocolURA__c.field-meta.xml
<CustomField>
    <fullName>ProtocolURA__c</fullName>
    <label>Protocolo URA</label>
    <length>20</length>
    <type>Text</type>
</CustomField>