force-app/main/default/objects/Case/fields/ProvisionalNumber__c.field-meta.xml
<CustomField>
    <fullName>ProvisionalNumber__c</fullName>
    <label>Número Provisório</label>
    <length>15</length>
    <type>Text</type>
</CustomField>