force-app/main/default/objects/Case/fields/QuantityOfDisputeItems__c.field-meta.xml
<CustomField>
    <fullName>QuantityOfDisputeItems__c</fullName>
    <label>Quantidade de Itens Contestados</label>
    <summaryForeignKey>DisputedItem__c.CaseId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>