force-app/main/default/objects/Case/fields/QuantityOfProceedingItems__c.field-meta.xml
<CustomField>
    <fullName>QuantityOfProceedingItems__c</fullName>
    <description>[Rivanilson Costa - 13/06/2024 - J62 - BL15] Quantidade de Itens Procedentes (Impugnado Total + Parcial)</description>
    <label>Quantidade de Itens Procedentes</label>
    <summaryFilterItems>
        <field>DisputedItem__c.Status__c</field>
        <operation>equals</operation>
        <value>Impugnado, Impugnado Parcial</value>
    </summaryFilterItems>
    <summaryForeignKey>DisputedItem__c.CaseId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>