force-app/main/default/objects/Case/fields/RecipientSpid__c.field-meta.xml
<CustomField>
    <fullName>RecipientSpid__c</fullName>
    <label>Operadora Receptora</label>
    <length>255</length>
    <type>Text</type>
</CustomField>