force-app/main/default/objects/Case/fields/RelatedInteraction__c.field-meta.xml
<CustomField>
    <fullName>RelatedInteraction__c</fullName>
    <label>Número da Interação</label>
    <length>25</length>
    <type>Text</type>
</CustomField>