force-app/main/default/objects/Case/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <label>Solicitação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>