force-app/main/default/objects/Case/fields/RequestMade__c.field-meta.xml
<CustomField>
    <fullName>RequestMade__c</fullName>
    <defaultValue>&quot;false&quot;</defaultValue>
    <label>Solicitação Efetuada</label>
    <length>10</length>
    <type>Text</type>
</CustomField>