force-app/main/default/objects/Case/fields/RequestObservation__c.field-meta.xml
<CustomField>
    <fullName>RequestObservation__c</fullName>
    <label>Observação da Solicitação</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>