force-app/main/default/objects/Case/fields/requestType__c.field-meta.xml
<CustomField>
    <fullName>requestType__c</fullName>
    <description>Tipo de solicitação de portabilidade (Estorno de port-in)</description>
    <label>Tipo Solicitacao</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EnviarSolicitPortab</fullName>
            </value>
            <value>
                <fullName>EnviarSolicitPortabFraude</fullName>
            </value>
            <value>
                <fullName>EnviarSolicitPortabErro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>