force-app/main/default/objects/Case/fields/ReturnGroup__c.field-meta.xml
<CustomField>
    <fullName>ReturnGroup__c</fullName>
    <description>Campo para armazenar o Grupo de Retorno do Caso</description>
    <label>Grupo de Retorno</label>
    <length>255</length>
    <type>Text</type>
</CustomField>