force-app/main/default/objects/Case/fields/SchedulingCount__c.field-meta.xml
<CustomField>
    <fullName>SchedulingCount__c</fullName>
    <label>Qtde Agendamentos</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>