force-app/main/default/objects/Case/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>Campo utilizado na parametrização de casos de alta complexidade e críticos no custom metadata HDE DE-PARA, para dependencias de campos e para campos fórmula no objeto. ex: visão</description>
    <label>Grupo de Atendimento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Loja</fullName>
            </value>
            <value>
                <fullName>Prime</fullName>
            </value>
            <value>
                <fullName>Ouvidoria</fullName>
            </value>
            <value>
                <fullName>Vivo V</fullName>
            </value>
            <value>
                <fullName>Púrpura</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Lojas (Revendas)</fullName>
                <label>Revendas</label>
            </value>
            <value>
                <fullName>Ouvidoria Comunidades</fullName>
            </value>
            <value>
                <fullName>VPR Lojas</fullName>
            </value>
            <value>
                <fullName>V</fullName>
                <isActive>false</isActive>
                <label>V</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>