force-app/main/default/objects/Case/fields/SegmentProduct__c.field-meta.xml
<CustomField>
    <fullName>SegmentProduct__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixa</fullName>
            </value>
            <value>
                <fullName>Móvel</fullName>
            </value>
            <value>
                <fullName>OtherProduct</fullName>
                <label>Outros Produtos</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>