force-app/main/default/objects/Case/fields/SendedNotesLegacySystem__c.field-meta.xml
<CustomField>
    <fullName>SendedNotesLegacySystem__c</fullName>
    <label>Registro de Notas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>