force-app/main/default/objects/Case/fields/ServiceDefinitionId__c.field-meta.xml
<CustomField>
    <fullName>ServiceDefinitionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Definição de Atendimento</label>
    <referenceTo>ServiceDefinition__c</referenceTo>
    <relationshipLabel>Cases Contestados</relationshipLabel>
    <relationshipName>CaseServiceDefinition</relationshipName>
    <type>Lookup</type>
</CustomField>