force-app/main/default/objects/Case/fields/ServiceDescription__c.field-meta.xml
<CustomField>
    <fullName>ServiceDescription__c</fullName>
    <label>Descrição</label>
    <length>255</length>
    <type>Text</type>
</CustomField>