force-app/main/default/objects/Case/fields/ServiceDetail__c.field-meta.xml
<CustomField>
    <fullName>ServiceDetail__c</fullName>
    <label>Detalhe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>