force-app/main/default/objects/Case/fields/ServiceNumber__c.field-meta.xml
<CustomField>
    <fullName>ServiceNumber__c</fullName>
    <label>Número de Atendimento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>