force-app/main/default/objects/Case/fields/ServiceOrigin__c.field-meta.xml
<CustomField>
    <fullName>ServiceOrigin__c</fullName>
    <label>Origem Atendimento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>