force-app/main/default/objects/Case/fields/ServiceQualificationMobile__c.field-meta.xml
<CustomField>
    <fullName>ServiceQualificationMobile__c</fullName>
    <label>Qualificação de Atendimento</label>
    <length>80</length>
    <type>Text</type>
</CustomField>