force-app/main/default/objects/Case/fields/ServiceQualificationTree__c.field-meta.xml
<CustomField>
    <fullName>ServiceQualificationTree__c</fullName>
    <label>Árvore de Atendimento</label>
    <length>20</length>
    <type>Text</type>
</CustomField>