force-app/main/default/objects/Case/fields/ServiceReason__c.field-meta.xml
<CustomField>
    <fullName>ServiceReason__c</fullName>
    <description>Descrição do motivo do contato do cliente. Pela integração CTI são as opções percorridas pelo cliente na URA.</description>
    <label>Motivo do Contato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>