force-app/main/default/objects/Case/fields/ServiceRequestId__c.field-meta.xml
<CustomField>
    <fullName>ServiceRequestId__c</fullName>
    <label>Número da SS</label>
    <length>40</length>
    <type>Text</type>
</CustomField>