force-app/main/default/objects/Case/fields/ServiceRequestStatus__c.field-meta.xml
<CustomField>
    <fullName>ServiceRequestStatus__c</fullName>
    <label>Status da SS</label>
    <length>30</length>
    <type>Text</type>
</CustomField>