force-app/main/default/objects/Case/fields/ServiceStatus__c.field-meta.xml
<CustomField>
    <fullName>ServiceStatus__c</fullName>
    <label>Status do Atendimento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>