force-app/main/default/objects/Case/fields/ServiceStoreAdabasSite__c.field-meta.xml
<CustomField>
    <fullName>ServiceStoreAdabasSite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[Rivanilson Costa - 05/07/2024 - J62 - BL15] Campo relacionado a fila de casos de Contestação, para trazer a informação do nome da Loja de Atendimento do usuário do campo “Criado Por em list view.</description>
    <label>Loja</label>
    <referenceTo>AdabasSite__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>