force-app/main/default/objects/Case/fields/ShippingContact__c.field-meta.xml
<CustomField>
    <fullName>ShippingContact__c</fullName>
    <description>[Rivanilson Costa - 11/06/2024 - J62 - BL15] Email Preenchido no Formulário de Solicitação de Contestação</description>
    <label>Contato de Envio</label>
    <length>50</length>
    <type>Text</type>
</CustomField>