force-app/main/default/objects/Case/fields/SlaAlert__c.field-meta.xml
<CustomField>
    <fullName>SlaAlert__c</fullName>
    <label>Alerta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Prazo</fullName>
            </value>
            <value>
                <fullName>24 Horas Finais</fullName>
            </value>
            <value>
                <fullName>Fora do Prazo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>