force-app/main/default/objects/Case/fields/SlaCaseHandling__c.field-meta.xml
<CustomField>
    <fullName>SlaCaseHandling__c</fullName>
    <label>Grupo de Tratativa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grupo de Atendimento - Fraude</fullName>
            </value>
            <value>
                <fullName>Grupo de Atendimento - GT Unificado</fullName>
            </value>
            <value>
                <fullName>Grupo de Atendimento - Ouvidoria</fullName>
            </value>
            <value>
                <fullName>Grupo de Atendimento - Resgate Gravação</fullName>
            </value>
            <value>
                <fullName>Grupo de Atendimento - Solução Online</fullName>
            </value>
            <value>
                <fullName>Grupo de Atend. Contestação - Atend</fullName>
            </value>
            <value>
                <fullName>Grupo de Atend. Contestação - Lojas</fullName>
            </value>
            <value>
                <fullName>Grupo de Atend. Ajuste Saldo - Atend</fullName>
            </value>
            <value>
                <fullName>Grupo de Atend. Ajuste Saldo - Lojas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>