force-app/main/default/objects/Case/fields/SlaCloseDateForecast__c.field-meta.xml
<CustomField>
    <fullName>SlaCloseDateForecast__c</fullName>
    <label>Encerramento Previsto</label>
    <type>DateTime</type>
</CustomField>