force-app/main/default/objects/Case/fields/SlaDueDate__c.field-meta.xml
<CustomField>
    <fullName>SlaDueDate__c</fullName>
    <label>Prazo SLA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 dia útil</fullName>
            </value>
            <value>
                <fullName>2 dias úteis</fullName>
            </value>
            <value>
                <fullName>5 dias úteis</fullName>
            </value>
            <value>
                <fullName>10 dias corridos</fullName>
            </value>
            <value>
                <fullName>1 dia corrido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>