force-app/main/default/objects/Case/fields/SLAisOverdue__c.field-meta.xml
<CustomField>
    <fullName>SLAisOverdue__c</fullName>
    <description>Essa fórmula de checkbox permitirá que você identifique facilmente se um caso está vencido</description>
    <formula>IF(
    FinalSLA__c == &apos;1 DU&apos;, 
    NOT(NOW() &gt; DueDate__c),
    
    IF(
        FinalSLA__c == &apos;10 DC&apos;, 
        IF(
            CreatedDate + 1 &gt; NOW(), 
            NOW() &gt; (CreatedDate + 10),
            FALSE  
        ),
        TRUE
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dentro da SLA</label>
    <type>Checkbox</type>
</CustomField>